# invoiceai-india-openenv

./: README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: invoices.py
server/: app.py  invoice_environment.py
